Fixed gallery horizontal scrolling hint

--- a/css/style.scss
+++ b/css/style.scss
@@ -341,8 +341,8 @@ section.gallery-wrapper {
       article.product-card {
         min-height: auto;
         margin: 40px 0;
-        min-width: 380px;  
-        width: 380px;
+        min-width: 340px;  
+
         scroll-snap-align: center;
       }
     }
